--- a/tmux.conf
+++ b/tmux.conf
@@ -55,3 +55,7 @@ setw -g automatic-rename on
 
 # Mode-keys style for copy mode
 setw -g mode-keys vi
+
+# Navigation entre les fenêtres avec ctrl + flêches 
+bind-key -n C-right next
+bind-key -n C-left prev
