--- a/tmux.conf
+++ b/tmux.conf
@@ -4,6 +4,8 @@
 # By yishan
 #
 
+# theme
+source-file "${HOME}/.tmux-themepack/powerline/block/blue.tmuxtheme"
 
 #shell
 set-option -g default-shell /usr/bin/zsh
@@ -14,12 +16,6 @@ set -g default-terminal "screen-256color"
 # Number of lines held in window history
 set -g history-limit 1000
 
-# Set status bar
-set -g status-bg black
-set -g status-fg white
-set -g status-interval 60
-set -g status-left-length 30
-set -g status-left '#[fg=blue](#S) #(whoami)@#H#[default]'
 
 
 # Change the prefix key to C-a
