Changement de thème

--- a/tmux.conf
+++ b/tmux.conf
@@ -1,11 +1,16 @@
-#
-# .tmux.conf
-#
-# By yishan
-#
+# List of plugins
+set -g @plugin 'tmux-plugins/tpm'
+set -g @plugin 'tmux-plugins/tmux-sensible'
+#set -g @plugin 'jimeh/tmux-themepack'
+#set -g @plugin 'dracula/tmux'
+#set -g @themepack 'powerline/block/blue'
+#set -g @plugin 'seebi/tmux-colors-solarized'
+#set -g @colors-solarized 'dark'
+set -g @plugin 'wfxr/tmux-power'
+set -g @tmux_power_theme 'snow'
 
-# theme
-source-file "${HOME}/.tmux-themepack/powerline/block/blue.tmuxtheme"
+# Customize
+set -g @tmux_power_time_icon '🕘'
 
 #shell
 set-option -g default-shell /usr/bin/zsh
@@ -15,8 +20,6 @@ set -g default-terminal "screen-256color"
 
 # Number of lines held in window history
 set -g history-limit 1000
-
-
 
 # Change the prefix key to C-a
 set -g prefix C-a
@@ -55,3 +58,6 @@ setw -g mode-keys vi
 # Navigation entre les fenêtres avec ctrl + flêches 
 bind-key -n C-right next
 bind-key -n C-left prev
+
+# Initialize TMUX plugin manager (keep this line at the very bottom of tmux.conf)
+run '~/.tmux/plugins/tpm/tpm'
