maj des dotfiles

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -1,3 +1,6 @@
+# fzf sur tous les panels
+set-option -g default-command "exec /bin/zsh -l"
+
 # List of plugins
 set -g @plugin 'tmux-plugins/tpm'
 set -g @plugin 'tmux-plugins/tmux-sensible'
@@ -25,6 +28,7 @@ set -g history-limit 1000
 set -g prefix C-a
 unbind C-b
 bind C-a send-prefix
+
 
 # Mouse
 set -g mouse on
@@ -59,5 +63,13 @@ setw -g mode-keys vi
 bind-key -n C-right next
 bind-key -n C-left prev
 
+# Navigation dans les lignes avec ctrl + maj + flêches
+bind -n C-S-Left send-keys M-b
+bind -n C-S-Right send-keys M-f
+
+# Fzf
+bind-key -n C-r send-keys C-r
+
 # Initialize TMUX plugin manager (keep this line at the very bottom of tmux.conf)
 run '~/.tmux/plugins/tpm/tpm'
+
