--- a/OSX/playbook.yml
+++ b/OSX/playbook.yml
@@ -1,6 +1,8 @@
 ---
 - hosts: localhost
   become: true
+  vars:
+    ansible_python_interpreter: /opt/homebrew/bin/python3
   collections:
     - community.general
 
