--- a/OSX/playbook.yml
+++ b/OSX/playbook.yml
@@ -6,6 +6,7 @@
     - community.general
 
   tasks:
+    # Installer les packages Homebrew nécessaires
     - name: Install required brew packages
       community.general.homebrew:
         name: "{{ item }}"
@@ -22,21 +23,31 @@
         - eza
         - fzf
         - starship
+        - zoxide
+        - thefuck
 
-    - name: Install required fonts
-      community.general.homebrew:
-        name: "{{ item }}"
-        state: present
-      loop:
-        - fontconfig
-        - font-fira-code-nerd-font
-        - font-go-mono-nerd-font
-        - font-hack-nerd-font
-        - font-jetbrains-mono-nerd-font
-        - font-meslo-lg-nerd-font
-        - font-monaspace-nerd-font
-        - font-noto-sans-symbols-2
+    # Installer Oh My Zsh
+    - name: Install Oh My Zsh if not installed
+      shell: |
+        if [ ! -d "$HOME/.oh-my-zsh" ]; then
+          sh -c "$(curl -fsSL https://raw.githubusercontent.com/ohmyzsh/ohmyzsh/master/tools/install.sh)"
+        fi
 
+    # Cloner le plugin history-substring-search
+    - name: Clone history-substring-search plugin
+      git:
+        repo: https://github.com/zsh-users/zsh-history-substring-search.git
+        dest: "{{ ansible_env.HOME }}/.oh-my-zsh/plugins/history-substring-search"
+        force: yes
+
+    # Assurer que le répertoire ~/.config existe
+    - name: Ensure ~/.config directory exists
+      file:
+        path: ~/.config
+        state: directory
+        mode: '0755'
+
+    # Copier les configurations
     - name: Copy WezTerm config
       copy:
         src: files/.wezterm.lua
@@ -48,12 +59,6 @@
         src: files/.tmux.conf
         dest: ~/.tmux.conf
         mode: 0644
-
-    - name: Ensure ~/.config directory exists
-      file:
-        path: ~/.config
-        state: directory
-        mode: '0755'
 
     - name: Copy Starship config
       copy:
@@ -67,7 +72,7 @@
         dest: ~/.vimrc
         mode: 0644
 
-    - name: Copy zsh config
+    - name: Copy Zsh config
       copy:
         src: files/.zshrc
         dest: ~/.zshrc
