--- a/OSX/playbook.yml
+++ b/OSX/playbook.yml
@@ -1,4 +1,3 @@
----
 - hosts: localhost
   vars:
     ansible_python_interpreter: /opt/homebrew/bin/python3
@@ -26,19 +25,17 @@
         - zoxide
         - thefuck
 
-    # Installer Oh My Zsh
-    - name: Install Oh My Zsh if not installed
-      shell: |
-        if [ ! -d "$HOME/.oh-my-zsh" ]; then
-          sh -c "$(curl -fsSL https://raw.githubusercontent.com/ohmyzsh/ohmyzsh/master/tools/install.sh)"
-        fi
+    # Supprimer l'ancien répertoire du plugin s'il existe
+    - name: Remove existing history-substring-search directory if it exists
+      file:
+        path: "{{ ansible_env.HOME }}/.oh-my-zsh/plugins/history-substring-search"
+        state: absent
 
     # Cloner le plugin history-substring-search
     - name: Clone history-substring-search plugin
       git:
         repo: https://github.com/zsh-users/zsh-history-substring-search.git
         dest: "{{ ansible_env.HOME }}/.oh-my-zsh/plugins/history-substring-search"
-        force: yes
 
     # Assurer que le répertoire ~/.config existe
     - name: Ensure ~/.config directory exists
