--- a/OSX/playbook.yml
+++ b/OSX/playbook.yml
@@ -26,6 +26,22 @@
         - zoxide
         - thefuck
 
+    # Installer les polices requises
+    - name: Install required fonts
+      community.general.homebrew:
+        name: "{{ item }}"
+        state: present
+      loop:
+        - fontconfig
+        - font-fira-code-nerd-font
+        - font-go-mono-nerd-font
+        - font-hack-nerd-font
+        - font-jetbrains-mono-nerd-font
+        - font-meslo-lg-nerd-font
+        - font-monaspace-nerd-font
+        - font-noto-sans-symbols-2
+        - font-sf-mono-nerd-font  # Ajout de cette police
+
     # Installer Oh My Zsh si non installé
     - name: Install Oh My Zsh if not installed
       shell: |
