--- a/OSX/playbook.yml
+++ b/OSX/playbook.yml
@@ -6,10 +6,10 @@
     - community.general
 
   tasks:
-    # Ajouter le tap des polices Homebrew
-    - name: Add homebrew/cask-fonts tap
+    # Ajouter le tap pour SF Mono Nerd Font Ligaturized
+    - name: Add homebrew tap for SFMono Nerd Font Ligaturized
       community.general.homebrew_tap:
-        name: homebrew/cask-fonts
+        name: shaunsingh/sfmono-nerd-font-ligaturized
         state: present
 
     # Installer les packages Homebrew nécessaires
@@ -38,7 +38,6 @@
         name: "{{ item }}"
         state: present
       loop:
-        - fontconfig
         - font-fira-code-nerd-font
         - font-go-mono-nerd-font
         - font-hack-nerd-font
@@ -46,7 +45,7 @@
         - font-meslo-lg-nerd-font
         - font-monaspace-nerd-font
         - font-noto-sans-symbols-2
-        - font-sf-mono-nerd-font-ligaturized  # Correct version of SF Mono Nerd Font
+        - font-sf-mono-nerd-font-ligaturized
 
     # Installer Oh My Zsh si non installé
     - name: Install Oh My Zsh if not installed
