Debug Install TPM Plugin

--- a/OSX/playbook.yml
+++ b/OSX/playbook.yml
@@ -94,9 +94,9 @@
         dest: ~/.tmux.conf
         mode: 0644
 
-    # Installer les plugins TPM
+    # Créer une session tmux dédiée à l'installation des plugins TPM
     - name: Install TPM plugins
-      command: /bin/bash -lc 'tmux start-server && tmux new-session -d && sleep 3 && tmux run-shell ~/.tmux/plugins/tpm/bin/install_plugins && tmux kill-session'
+      command: /bin/bash -lc 'tmux new-session -d -s tpm_install && sleep 3 && tmux run-shell ~/.tmux/plugins/tpm/bin/install_plugins && tmux kill-session -t tpm_install'
 
     # Assurer que le répertoire ~/.config existe
     - name: Ensure ~/.config directory exists
