--- a/OSX/playbook.yml
+++ b/OSX/playbook.yml
@@ -6,6 +6,14 @@
     - community.general
 
   tasks:
+    # Corriger les permissions sur /private/tmp
+    - name: Fix permissions on /private/tmp
+      become: true
+      file:
+        path: /private/tmp
+        mode: '1777'
+        state: directory
+
     # Ajouter le tap pour SF Mono Nerd Font Ligaturized
     - name: Add homebrew tap for SFMono Nerd Font Ligaturized
       community.general.homebrew_tap:
