--- a/OSX/playbook.yml
+++ b/OSX/playbook.yml
@@ -6,13 +6,6 @@
     - community.general
 
   tasks:
-    # Corriger les permissions sur /private/tmp
-    - name: Fix permissions on /private/tmp
-      become: true
-      file:
-        path: /private/tmp
-        mode: '1777'
-        state: directory
 
     # Ajouter le tap pour SF Mono Nerd Font Ligaturized
     - name: Add homebrew tap for SFMono Nerd Font Ligaturized
@@ -88,6 +81,14 @@
       git:
         repo: https://github.com/zsh-users/zsh-history-substring-search.git
         dest: "{{ ansible_env.HOME }}/.oh-my-zsh/plugins/history-substring-search"
+
+    # # Corriger les permissions sur /private/tmp
+    # - name: Fix permissions on /private/tmp
+    #   become: true
+    #   file:
+    #     path: /private/tmp
+    #     mode: '1777'
+    #     state: directory
 
     # Installer TPM (Tmux Plugin Manager)
     - name: Clone TPM (Tmux Plugin Manager)
