--- a/OSX/playbook.yml
+++ b/OSX/playbook.yml
@@ -6,6 +6,24 @@
     - community.general
 
   tasks:
+    # Corriger les permissions sur /private/tmp
+    - name: Fix permissions on /private/tmp
+      become: true
+      file:
+        path: /private/tmp
+        mode: '1777'
+        state: directory
+
+    # Supprimer l'ancien socket de tmux s'il existe
+    - name: Remove tmux socket if it exists
+      file:
+        path: /private/tmp/tmux-501
+        state: absent
+      ignore_errors: true
+
+    # Démarrer le serveur tmux manuellement
+    - name: Start tmux server manually
+      command: /opt/homebrew/bin/tmux start-server
 
     # Ajouter le tap pour SF Mono Nerd Font Ligaturized
     - name: Add homebrew tap for SFMono Nerd Font Ligaturized
@@ -82,13 +100,6 @@
         repo: https://github.com/zsh-users/zsh-history-substring-search.git
         dest: "{{ ansible_env.HOME }}/.oh-my-zsh/plugins/history-substring-search"
 
-    # Corriger les permissions sur /private/tmp
-    - name: Fix permissions on /private/tmp
-      file:
-        path: /private/tmp
-        mode: '1777'
-        state: directory
-
     # Installer TPM (Tmux Plugin Manager)
     - name: Clone TPM (Tmux Plugin Manager)
       git:
@@ -105,7 +116,7 @@
 
     # Créer une session tmux dédiée à l'installation des plugins TPM
     - name: Install TPM plugins
-      command: /bin/bash -lc 'tmux new-session -d -s tpm_install && sleep 3 && tmux run-shell ~/.tmux/plugins/tpm/bin/install_plugins && tmux kill-session -t tpm_install'
+      command: /bin/bash -lc '/opt/homebrew/bin/tmux new-session -d -s tpm_install && sleep 3 && /opt/homebrew/bin/tmux run-shell ~/.tmux/plugins/tpm/bin/install_plugins && /opt/homebrew/bin/tmux kill-session -t tpm_install'
 
     # Assurer que le répertoire ~/.config existe
     - name: Ensure ~/.config directory exists
@@ -113,7 +124,6 @@
         path: ~/.config
         state: directory
         mode: '0755'
-        force: true
 
     # Copier les configurations
     - name: Copy WezTerm config
