DEBUG - Comment all lines except essential

--- a/OSX/files/.tmux.conf
+++ b/OSX/files/.tmux.conf
@@ -1,8 +1,8 @@
-# Utiliser Zsh par défaut
-set-option -g default-command "exec /bin/zsh -l"
+# # Utiliser Zsh par défaut
+# set-option -g default-command "exec /bin/zsh -l"
 
-# Détruire les fenêtres détachées automatiquement
-set-option -g destroy-unattached on
+# # Détruire les fenêtres détachées automatiquement
+# set-option -g destroy-unattached on
 
 set -g default-terminal "xterm-256color"
 set -ga terminal-overrides ',xterm-256color:Tc'
@@ -14,90 +14,90 @@ set -g @plugin "janoamaral/tokyo-night-tmux"
 # set -g @plugin 'tmux-plugins/tmux-resurrect'  # Sauvegarde de sessions
 # set -g @plugin 'tmux-plugins/tmux-continuum'  # Sauvegarde automatique
 
-# Style des identifiants de fenêtre et panneaux
-set -g @tokyo-night-tmux_window_id_style digital
-set -g @tokyo-night-tmux_pane_id_style hsquare
-set -g @tokyo-night-tmux_zoom_id_style dsquare
+# # Style des identifiants de fenêtre et panneaux
+# set -g @tokyo-night-tmux_window_id_style digital
+# set -g @tokyo-night-tmux_pane_id_style hsquare
+# set -g @tokyo-night-tmux_zoom_id_style dsquare
 
-# Activer des widgets (modifie selon tes besoins)
-set -g @tokyo-night-tmux_show_datetime 1
-set -g @tokyo-night-tmux_show_battery_widget 1
-set -g @tokyo-night-tmux_battery_low_threshold 21
-set -g @tokyo-night-tmux_show_netspeed 1
-set -g @tokyo-night-tmux_netspeed_iface "en0"  # Change pour ton interface réseau
+# # Activer des widgets (modifie selon tes besoins)
+# set -g @tokyo-night-tmux_show_datetime 1
+# set -g @tokyo-night-tmux_show_battery_widget 1
+# set -g @tokyo-night-tmux_battery_low_threshold 21
+# set -g @tokyo-night-tmux_show_netspeed 1
+# set -g @tokyo-night-tmux_netspeed_iface "en0"  # Change pour ton interface réseau
 
-# # Couleur globale de la barre d'état
-# set -g status-style 'bg=#4A4744,fg=#C0C0C0'
+# # # Couleur globale de la barre d'état
+# # set -g status-style 'bg=#4A4744,fg=#C0C0C0'
 
-# # Couleur des onglets inactifs avec espaces et séparateurs
-# set -g window-status-format '#[bg=#4A4744,fg=#888888]  #I:#W  '
+# # # Couleur des onglets inactifs avec espaces et séparateurs
+# # set -g window-status-format '#[bg=#4A4744,fg=#888888]  #I:#W  '
 
-# # Couleur de l'onglet actif avec espaces et séparateurs
-# set -g window-status-current-format '#[bg=#5A5855,fg=#FFFFFF]  #[bold]#I:#W  #[default]'
+# # # Couleur de l'onglet actif avec espaces et séparateurs
+# # set -g window-status-current-format '#[bg=#5A5855,fg=#FFFFFF]  #[bold]#I:#W  #[default]'
 
-# # Séparateur entre les fenêtres avec espace supplémentaire
-# set -g window-status-separator ' #[fg=#000000,bold] '
+# # # Séparateur entre les fenêtres avec espace supplémentaire
+# # set -g window-status-separator ' #[fg=#000000,bold] '
 
-# # Couleurs des bordures de panneau
-# set -g pane-border-style 'fg=#3E3C3B'
-# set -g pane-active-border-style 'fg=#7A7673'
+# # # Couleurs des bordures de panneau
+# # set -g pane-border-style 'fg=#3E3C3B'
+# # set -g pane-active-border-style 'fg=#7A7673'
 
-# # Statut droit (date, heure, etc.)
-# set -g status-right '#[bg=#5A5855,fg=#FFFFFF] %Y-%m-%d %H:%M | #H '
+# # # Statut droit (date, heure, etc.)
+# # set -g status-right '#[bg=#5A5855,fg=#FFFFFF] %Y-%m-%d %H:%M | #H '
 
-# Recharger la configuration TMUX
-bind r source-file ~/.tmux.conf \; display-message "Configuration TMUX rechargée"
-# Afficher uniquement le dernier répertoire
-set-option -g status-left "#(basename #{pane_current_path})"
+# # Recharger la configuration TMUX
+# bind r source-file ~/.tmux.conf \; display-message "Configuration TMUX rechargée"
+# # Afficher uniquement le dernier répertoire
+# set-option -g status-left "#(basename #{pane_current_path})"
 
-# Limite de l'historique
-set -g history-limit 5000
+# # Limite de l'historique
+# set -g history-limit 5000
 
-# Numérotation des fenêtres et des panneaux à partir de 1
-set -g base-index 1
-setw -g pane-base-index 1
+# # Numérotation des fenêtres et des panneaux à partir de 1
+# set -g base-index 1
+# setw -g pane-base-index 1
 
-# Renuméroter les fenêtres automatiquement
-set -g renumber-windows on
+# # Renuméroter les fenêtres automatiquement
+# set -g renumber-windows on
 
-# Ne pas garder le chemin courant lors de la création d'une nouvelle fenêtre
-bind c new-window -c ~
+# # Ne pas garder le chemin courant lors de la création d'une nouvelle fenêtre
+# bind c new-window -c ~
 
-# Navigation rapide entre les fenêtres
-bind a last-window
+# # Navigation rapide entre les fenêtres
+# bind a last-window
 
-# Changer la touche préfixe à C-a (à la place de C-b)
-set -g prefix C-a
-unbind C-b
-bind C-a send-prefix
+# # Changer la touche préfixe à C-a (à la place de C-b)
+# set -g prefix C-a
+# unbind C-b
+# bind C-a send-prefix
 
-# Activer la souris
-set -g mouse on
+# # Activer la souris
+# set -g mouse on
 
-# Recharger la configuration
-unbind r
-bind r source-file ~/.tmux.conf \; display-message "Reloaded"
+# # Recharger la configuration
+# unbind r
+# bind r source-file ~/.tmux.conf \; display-message "Reloaded"
 
-# Copier-coller avec le presse-papiers système (macOS)
-bind C-c run "tmux save-buffer - | pbcopy"
-bind C-v run "tmux set-buffer \"$(pbpaste)\"; tmux paste-buffer"
+# # Copier-coller avec le presse-papiers système (macOS)
+# bind C-c run "tmux save-buffer - | pbcopy"
+# bind C-v run "tmux set-buffer \"$(pbpaste)\"; tmux paste-buffer"
 
-# Notifications d'activité des fenêtres
-setw -g monitor-activity on
-set -g visual-activity on
+# # Notifications d'activité des fenêtres
+# setw -g monitor-activity on
+# set -g visual-activity on
 
-# Renommer automatiquement les fenêtres en fonction du répertoire courant
-setw -g automatic-rename on
+# # Renommer automatiquement les fenêtres en fonction du répertoire courant
+# setw -g automatic-rename on
 
-# Utiliser le mode-keys en style vi pour la copie
-setw -g mode-keys vi
+# # Utiliser le mode-keys en style vi pour la copie
+# setw -g mode-keys vi
 
-# Raccourcis pour diviser l'écran
-bind | split-window -h
-bind - split-window -v
+# # Raccourcis pour diviser l'écran
+# bind | split-window -h
+# bind - split-window -v
 
-# Synchronisation du presse-papiers TMUX avec le système
-set-option -g set-clipboard on
+# # Synchronisation du presse-papiers TMUX avec le système
+# set-option -g set-clipboard on
 
 # Initialiser le gestionnaire de plugins TMUX (doit être à la fin)
 run '~/.tmux/plugins/tpm/tpm'
