--- a/OSX/files/.tmux.conf
+++ b/OSX/files/.tmux.conf
@@ -1,8 +1,8 @@
-# # Utiliser Zsh par défaut
-# set-option -g default-command "exec /bin/zsh -l"
+# Utiliser Zsh par défaut
+set-option -g default-command "exec /bin/zsh -l"
 
-# # Détruire les fenêtres détachées automatiquement
-# set-option -g destroy-unattached on
+# Détruire les fenêtres détachées automatiquement
+set-option -g destroy-unattached on
 
 set -g default-terminal "xterm-256color"
 set -ga terminal-overrides ',xterm-256color:Tc'
