--- a/OSX/files/.tmux.conf
+++ b/OSX/files/.tmux.conf
@@ -1,5 +1,5 @@
 # Utiliser Zsh par défaut
-set-option -g default-command "exec /bin/zsh -l"
+# set-option -g default-command "exec /bin/zsh -l"
 
 # Détruire les fenêtres détachées automatiquement
 set-option -g destroy-unattached on
