--- a/OSX/files/.tmux.conf
+++ b/OSX/files/.tmux.conf
@@ -2,7 +2,7 @@
 # set-option -g default-command "exec /bin/zsh -l"
 
 # Détruire les fenêtres détachées automatiquement
-set-option -g destroy-unattached on
+# set-option -g destroy-unattached on
 
 set -g default-terminal "xterm-256color"
 set -ga terminal-overrides ',xterm-256color:Tc'
