--- a/OSX/files/.tmux.conf
+++ b/OSX/files/.tmux.conf
@@ -1,100 +1,100 @@
-# Utiliser Zsh par défaut
+# Use Zsh by default
 set-option -g default-command "exec /bin/zsh -l"
 
 set -g default-terminal "xterm-256color"
 set -ga terminal-overrides ',xterm-256color:Tc'
 
-# Liste des plugins TMUX via TPM (Tmux Plugin Manager)
+# List of TMUX plugins via TPM (Tmux Plugin Manager)
 set -g @plugin 'tmux-plugins/tpm'
 set -g @plugin 'tmux-plugins/tmux-sensible'
 set -g @plugin "janoamaral/tokyo-night-tmux"
-set -g @plugin 'tmux-plugins/tmux-resurrect'  # Sauvegarde de sessions
-set -g @plugin 'tmux-plugins/tmux-continuum'  # Sauvegarde automatique
+set -g @plugin 'tmux-plugins/tmux-resurrect'  # Session restoration
+set -g @plugin 'tmux-plugins/tmux-continuum'  # Automatic session save
 
-# Style des identifiants de fenêtre et panneaux
+# Style for window and pane identifiers
 set -g @tokyo-night-tmux_window_id_style digital
 set -g @tokyo-night-tmux_pane_id_style hsquare
 set -g @tokyo-night-tmux_zoom_id_style dsquare
 
-# Activer des widgets (modifie selon tes besoins)
+# Enable widgets (modify as needed)
 set -g @tokyo-night-tmux_show_datetime 1
 set -g @tokyo-night-tmux_show_battery_widget 1
 set -g @tokyo-night-tmux_battery_low_threshold 21
 set -g @tokyo-night-tmux_show_netspeed 1
-set -g @tokyo-night-tmux_netspeed_iface "en0"  # Change pour ton interface réseau
+set -g @tokyo-night-tmux_netspeed_iface "en0"  # Change to your network interface
 
-# Couleur globale de la barre d'état
+# Global color for the status bar
 set -g status-style 'bg=#4A4744,fg=#C0C0C0'
 
-# Couleur des onglets inactifs avec espaces et séparateurs
+# Color for inactive tabs with spaces and separators
 set -g window-status-format '#[bg=#4A4744,fg=#888888]  #I:#W  '
 
-# Couleur de l'onglet actif avec espaces et séparateurs
+# Color for active tab with spaces and separators
 set -g window-status-current-format '#[bg=#5A5855,fg=#FFFFFF]  #[bold]#I:#W  #[default]'
 
-# Séparateur entre les fenêtres avec espace supplémentaire
+# Separator between windows with extra space
 set -g window-status-separator ' #[fg=#000000,bold] '
 
-# Couleurs des bordures de panneau
+# Pane border colors
 set -g pane-border-style 'fg=#3E3C3B'
 set -g pane-active-border-style 'fg=#7A7673'
 
-# Statut droit (date, heure, etc.)
+# Right status (date, time, etc.)
 set -g status-right '#[bg=#5A5855,fg=#FFFFFF] %Y-%m-%d %H:%M | #H '
 
-# Recharger la configuration TMUX
-bind r source-file ~/.tmux.conf \; display-message "Configuration TMUX rechargée"
-# Afficher uniquement le dernier répertoire
+# Reload TMUX configuration
+bind r source-file ~/.tmux.conf \; display-message "TMUX configuration reloaded"
+# Display only the last directory
 set-option -g status-left "#(basename #{pane_current_path})"
 
-# Limite de l'historique
+# History limit
 set -g history-limit 5000
 
-# Numérotation des fenêtres et des panneaux à partir de 1
+# Number windows and panes starting from 1
 set -g base-index 1
 setw -g pane-base-index 1
 
-# Renuméroter les fenêtres automatiquement
+# Automatically renumber windows
 set -g renumber-windows on
 
-# Ne pas garder le chemin courant lors de la création d'une nouvelle fenêtre
+# Don't keep the current path when creating a new window
 bind c new-window -c ~
 
-# Navigation rapide entre les fenêtres
+# Quick navigation between windows
 bind a last-window
 
-# Changer la touche préfixe à C-a (à la place de C-b)
+# Change the prefix key to C-a (instead of C-b)
 set -g prefix C-a
 unbind C-b
 bind C-a send-prefix
 
-# Activer la souris
+# Enable mouse support
 set -g mouse on
 
-# Recharger la configuration
+# Reload configuration
 unbind r
 bind r source-file ~/.tmux.conf \; display-message "Reloaded"
 
-# Copier-coller avec le presse-papiers système (macOS)
+# Copy-paste with system clipboard (macOS)
 bind C-c run "tmux save-buffer - | pbcopy"
 bind C-v run "tmux set-buffer \"$(pbpaste)\"; tmux paste-buffer"
 
-# Notifications d'activité des fenêtres
+# Window activity notifications
 setw -g monitor-activity on
 set -g visual-activity on
 
-# Renommer automatiquement les fenêtres en fonction du répertoire courant
+# Automatically rename windows based on the current directory
 setw -g automatic-rename on
 
-# Utiliser le mode-keys en style vi pour la copie
+# Use vi-style keys in copy mode
 setw -g mode-keys vi
 
-# Raccourcis pour diviser l'écran
+# Shortcuts for splitting the screen
 bind | split-window -h
 bind - split-window -v
 
-# Synchronisation du presse-papiers TMUX avec le système
+# Synchronize TMUX clipboard with the system
 set-option -g set-clipboard on
 
-# Initialiser le gestionnaire de plugins TMUX (doit être à la fin)
+# Initialize TMUX plugin manager (must be at the end)
 run '~/.tmux/plugins/tpm/tpm'
